--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "Dashboard HMI per il controllo del processo di pressurizzazione GPL con N₂",
   "type": "module",
   "scripts": {
-	  "dev": "vite",
-	  "build": "vite build",
-	  "preview": "vite preview",
-	  "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-	  "type-check": "tsc --noEmit"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "lucide-react": "^0.263.1",
+    "ping": "^0.4.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.263.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
